--- a/bookingApp04192022/bookingApp04192022.csproj
+++ b/bookingApp04192022/bookingApp04192022.csproj
@@ -14,5 +14,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 </Project>
